# poker-app

./: commands.md  pyproject.toml
app/: main.py
app/actions/: create_superuser.py
app/alembic/versions/: 2025_05_27_1702-dcc4aa595e7b_create_users_table.py  2025_05_27_1753-e243ac89b096_create_users_table.py  2025_05_27_1805-1a40d426fa0a_create_access_tokens_table.py
app/api/: fastapi_users.py
app/api/api_v1/: __init__.py  auth.py  messages.py  users.py
app/api/dependencies/: user_manager.py
app/api/dependencies/authentication/: __init__.py  fastapi_users.py  strategy.py
app/core/: config.py
app/core/authentication/: user_manager.py
app/core/models/: __init__.py  access_token.py  base.py  user.py
app/core/schemas/: user.py
app/tests/: conftest.py  contants.py  test_users.py
app/tests/tests_poker/: test_card.py  test_deck.py  test_eval.py
app/tests/tests_poker/fixtures/eval/: __init__.py  combinations.py  hands.py  hands_pairs.py
app/utils/games/poker/: __init__.py  card.py  deck.py  eval.py  player.py
